--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
     <section id="about" class="section">
         <h2 class="section-title-centered">About Me</h2>
         <div class="about-layout">
-            <div style="box-shadow: -20px 20px 0 rgba(0, 60, 77, 0.15); flex-shrink: 0;">
-                <img src="images/headshot.png" alt="Emily Foley" loading="lazy" style="max-width: 300px; height: auto; display: block;">
+            <div class="image-wrapper">
+                <img src="images/headshot.png" alt="Emily Foley" loading="lazy" class="profile-img-shadowed">
               </div>
+              
+              
 
           <div class="about-text">
             <p>
