--- a/interests.html
+++ b/interests.html
@@ -5,7 +5,9 @@
   <title>Personal Interests | Emily M. Foley</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;700&family=Libre+Baskerville:ital@0;1&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/css/style.css">
+<!-- Correct -->
+<link rel="stylesheet" href="assets/css/style.css">
+
 
 </head>
 <body>
@@ -40,6 +42,7 @@
           <img src="images/lucy6.jpg" loading="lazy" />
           <img src="images/lucy4.jpg" loading="lazy" />
           <img src="images/lucy5.jpg" loading="lazy" />
+          <img src="images/Screenshot 2025-05-19 at 6.20.14 PM.png" loading="lazy" />
         </div>
       </div>
     
