--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <section id="about" class="section">
         <h2 class="section-title-centered">About Me</h2>
         <div class="about-layout">
-            <div class="image-wrapper">
-                <img src="images/headshot.png" alt="Emily Foley" loading="lazy" class="profile-img-shadowed">
+            <div class="profile-image-container">
+                <img src="images/headshot.png" alt="Emily Foley" class="profile-image" loading="lazy" />
               </div>
               
               
