--- a/index.html
+++ b/index.html
@@ -35,11 +35,9 @@
     <section id="about" class="section">
         <h2 class="section-title-centered">About Me</h2>
         <div class="about-layout">
-            <div class="profile-image-container">
-                <img src="images/headshot.png" alt="Emily Foley" class="profile-image" loading="lazy" />
+            <div style="box-shadow: -20px 20px 0 rgba(0, 60, 77, 0.15); flex-shrink: 0;">
+                <img src="images/headshot.png" alt="Emily Foley" loading="lazy" style="max-width: 300px; height: auto; display: flex;">
               </div>
-              
-              
 
           <div class="about-text">
             <p>
