--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 
 </head>
 <body>
-  
-
   <header>
     <h1>Emily M. Foley</h1>
     <p>Applied Mathematics PhD Student at the University of Arizona</p>
@@ -46,7 +44,7 @@
               Interdisciplinary Program</a> at the University of Arizona, and a <a class="text-sm-bold" href="https://www.krellinst.org/csgf/"> U.S. Department of Energy Computational Science Fellow</a>.
               I hold bachelor of science degrees in physics and mathematics from Wake Forest University where I was advised by Paul Anderson and John Gemmer. Broadly, my background in physics, astronomy, and 
               applied mathematics has led me to leverage computational and mathematical tools to address problems of scientific importance. I am currently interested in high performance and scientific 
-              computing for large scale, multiphysics problems in astrophysics. For detailed descriptions of my past research projects, see the "Research" section of this page. Upon completion of my PhD, I plan to pursue a career in 
+              computing for large scale, multiphysics problems in astrophysics. For detailed descriptions of my past research projects, see the "Research" section of this page. I plan to pursue a career in 
               fundamental science research at a national laboratory.
             </p>
           </div>
