--- a/outreach.html
+++ b/outreach.html
@@ -53,7 +53,7 @@
         <p>
           At Wake Forest, I was the lead organizer for the annual <a href="https://iris.wfu.edu/">Integrating Research in Science Conference</a>, which brought together 70+ undergraduates from 7 different universities in North Carolina to listen to student research presentations and recieve feedback on their work from faculty. I helped organize the conference with student volunteers from Wake Forest and Elon University beginning in 2021 and was the lead organizer in 2024.
         </p>
-        <img src="images/   " class="research-images" />
+        <img src="images/iris.JPG" class="research-images" />
       </div>
     </section>
 
