--- a/research.html
+++ b/research.html
@@ -87,6 +87,8 @@
     </div>
   
   </main>
-  
+  <footer>
+    <p>&copy; 2025 Emily M. Foley | University of Arizona</p>
+  </footer>
 </body>
 </html>
