--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
     <section id="about" class="section">
         <h2 class="section-title-centered">About Me</h2>
         <div class="about-layout">
-            <div style="box-shadow: -20px 20px 0 rgba(0, 60, 77, 0.15); flex-shrink: 0;">
-                <img src="images/headshot.png" alt="Emily Foley" loading="lazy" style="max-width: 300px; height: auto; display: flex;">
-              </div>
+        <div class="image-wrapper">
+          <div class="shadow-box">
+            <img src="images/headshot.png" alt="Emily Foley" loading="lazy">
+          </div>
+        </div>
+
+
 
           <div class="about-text">
             <p>
@@ -87,8 +91,8 @@
 
     <section id="contact" class="section">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:emfoley@arizona.edu">emfoley@arizona.edu</a></p>
-      <a href="https://www.linkedin.com/in/emily-foley-265591206/">LinkedIn</a>
+      <p class="about-text" >Email: <a href="mailto:emfoley@arizona.edu">emfoley@arizona.edu</a></p>
+      <p class="about-text"><a href="https://www.linkedin.com/in/emily-foley-265591206/">LinkedIn</a></p>
     </section>
   </main>
 
