--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 
 </head>
 <body>
-  <header>
-    <h1>Emily M. Foley</h1>
-    <p>Applied Mathematics PhD Student at the University of Arizona</p>
-  </header>
+<header>
+  <img src="images/uofa.png" alt="UA Logo" class="header-logo-fixed" />
+  <h1>Emily M. Foley</h1>
+  <p>Applied Mathematics PhD Student at the University of Arizona</p>
+</header>
+
 
   <nav>
       <ul>
@@ -24,8 +26,8 @@
         <li><a href="files/Emily_Foley_CV.pdf" target="_blank">CV</a></li>
         <li><a href="interests.html">Personal Interests</a></li>
       </ul>
-    </nav>
-  </header>
+  </nav>
+
 
   
 
