--- a/research.html
+++ b/research.html
@@ -12,11 +12,11 @@
 
 </head>
 <body>
-
-  <header>
-    <h1>Emily M. Foley</h1>
-    <p>Applied Mathematics PhD Student at the University of Arizona</p>
-  </header>
+<header>
+  <img src="images/uofa.png" alt="UA Logo" class="header-logo-fixed" />
+  <h1>Emily M. Foley</h1>
+  <p>Applied Mathematics PhD Student at the University of Arizona</p>
+</header>
 
   <nav>
       <ul>
