--- a/research.html
+++ b/research.html
@@ -87,8 +87,23 @@
     </div>
   
   </main>
-  <footer>
-    <p>&copy; 2025 Emily M. Foley | University of Arizona</p>
-  </footer>
+  <div id="site-footer"></div>
+
+<script>
+  fetch("footer.html")
+    .then(response => response.text())
+    .then(html => {
+      document.getElementById("site-footer").innerHTML = html;
+
+      const updated = new Date(document.lastModified);
+      const monthNames = [
+        "January", "February", "March", "April", "May", "June",
+        "July", "August", "September", "October", "November", "December"
+      ];
+      const formatted = `${monthNames[updated.getMonth()]} ${updated.getFullYear()}`;
+      document.getElementById("last-updated").textContent = formatted;
+    });
+</script>
+
 </body>
 </html>
